Week 3 Assignment done
